--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://tnp-siteyesyes.webconstructions.co.uk/st" style="position: fixed; inset: 0px; outline: none; border: none; height: 100%; width: 100%;"></iframe>
+<iframe src="https://tnp-siteyesyes.webconstructions.co.uk" style="position: fixed; inset: 0px; outline: none; border: none; height: 100%; width: 100%;"></iframe>
